[package]
name = "lang"
version = "0.1.0"
authors = ["hadxu <hadxu@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "8.2.0", optional = true }
actix-web = "1.0.8"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "wasm"
path = "src/wasm/main.rs"

[[bin]]
name = "lang"
path = "src/bin/main.rs"
required-features = ["binaries"]

[features]
binaries = ["rustyline"]

